--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.8",
+    "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.8.1",
     "react": "^19.0.0",
