--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/material": "^6.4.8",
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.8.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
