--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.8.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
+    "lucide-react": "^0.510.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
